--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -20,22 +20,12 @@ build:
 
 test:
   requires:
-    - pytest
-    - pytest-flake8
-    - pytest-cov
-    - asynctest
-    - pytest-tornasync
-    - numpy
-    - astropy
-    - jsonschema
-    - pyyaml
-    - boto3
-    - moto
+    - ts-conda-build
     - pandas
     - ts-simactuators
     - ts-dds
-    - ts-idl
-    - ts-salobj
+    - ts-idl {{ idl_version }}
+    - ts-salobj {{ salobj_version }}
   source_files:
     - python
     - bin.src
