Update the setup.cfg.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ exclude =
   **/*/__init__.py,
   **/*/version.py,
   tests/.tests
+per-file-ignores = python/lsst/ts/m2/model.py:W505
 
 [tool:pytest]
 addopts = --flake8
