--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -26,12 +26,11 @@ test:
     - ts-dds
     - ts-idl {{ idl_version }}
     - ts-salobj {{ salobj_version }}
-    - ts_tcpip
+    - ts-tcpip
   source_files:
     - python
     - bin.src
     - tests
-    - schema
     - setup.cfg
   commands:
     - py.test
@@ -50,4 +49,4 @@ requirements:
     - ts-salobj
     - ts-simactuators
     - pandas
-    - ts_tcpip
+    - ts-tcpip
