Use the LSST_DDS_PARTITION_PREFIX.

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -16,7 +16,7 @@ build:
     - PYTHON_BUILD_VERSION
     - PYTHON_BUILD_LOCATION
     - TS_CONFIG_MTTCS_DIR
-    - LSST_DDS_DOMAIN
+    - LSST_DDS_PARTITION_PREFIX
 
 test:
   requires:
