--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -8,6 +8,8 @@ source:
 
 build:
   script: python -m pip install --no-deps --ignore-installed .
+  entry_points:
+    - run_mtm2 = lsst.ts.m2.cli:run_mtm2
   script_env:
     - PATH
     - PYTHONPATH
