--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -7,24 +7,15 @@ source:
   path: ../
 
 build:
+  noarch: generic
   script: python -m pip install --no-deps --ignore-installed .
   entry_points:
     - run_mtm2 = lsst.ts.m2.csc:run_mtm2
-  script_env:
-    - PATH
-    - PYTHONPATH
-    - LD_LIBRARY_PATH
-    - OSPL_HOME
-    - PYTHON_BUILD_VERSION
-    - PYTHON_BUILD_LOCATION
-    - TS_CONFIG_MTTCS_DIR
 
 test:
   requires:
     - ts-conda-build
-    - pandas
     - ts-simactuators
-    - ts-dds
     - ts-idl {{ idl_version }}
     - ts-salobj {{ salobj_version }}
     - ts-tcpip
