Add the .pre-commit-config.yaml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,10 @@ flake8-max-line-length = 110
 flake8-max-doc-length = 79
 asyncio_mode = "strict"
 
+[tool.isort]
+profile = "black"
+skip = ["__init__.py"]
+
 [project.optional-dependencies]
 dev = [
     "documenteer[pipelines]",
