--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,12 @@ dev = [
     "documenteer[pipelines]",
     "pandas",
 ]
+
+# Only needed if project uses mypy
+[tool.mypy]
+disallow_untyped_defs = "True"
+ignore_missing_imports = "True"
+# The following only excludes version.py when running mypy from the command line.
+# `--ignore-glob=*/version.py` in `[tool:pytest]` excludes the file from pytest,
+# because pytest explicitly specifies each file being tested, and that overrides mypy's exclude.
+exclude = "version.py"
